--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,7 @@ http {
   server {
     listen 80;
     location ^~ /.well-known/acme-challenge/ {
+      root /var/www;
       allow all;
       default_type "text/plain";
     }
